# plex-metadata-tpdb

./: .env.example  .gitignore  ADMIN_SEARCH_FIX.md  API.md  CODEBASE_EXPLANATION.md  CODE_COMMENTS_DETAILED.md  CODE_IMPROVEMENTS.md  DOCUMENTATION_INDEX.md  IMPROVEMENTS_CHECKLIST.md  IMPROVEMENTS_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_CODE_REVIEW.md  SEARCH_FIX_SUMMARY.md  SEARCH_TESTING_GUIDE.md  START_HERE.md  openai.json  pyproject.toml
app/: __init__.py  config.py  constants.py  main.py
app/clients/: __init__.py  rate_limiter.py  tpdb_client.py
app/db/: __init__.py  database.py
app/db/models/: __init__.py  cache_entry.py  movie.py  performer.py  scene.py  site.py
app/mappers/: __init__.py  common.py  movie_mapper.py  show_mapper.py
app/models/: __init__.py  plex.py  tpdb.py
app/parsers/: __init__.py  patterns.py  scene_parser.py
app/providers/: __init__.py  movie_provider.py  tv_provider.py
app/routes/: __init__.py  movie.py  tv.py
app/services/: __init__.py  cache_service.py  match_service.py  metadata_service.py
app/web/: __init__.py  router.py
app/web/templates/: base.html  cache.html  dashboard.html  search.html  settings.html
docker/: Dockerfile  docker-compose.yml
